kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hivebox-api
  template:
    metadata:
      labels:
        app: hivebox-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
      - name: hivebox
        image: ghcr.io/twiki2/hivebox:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
