kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  selector:
    app: hivebox-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
